RESOLVED FIXED15281
WebKit hits ASSERT when attempting to drag an image from an SVG
https://bugs.webkit.org/show_bug.cgi?id=15281
Summary WebKit hits ASSERT when attempting to drag an image from an SVG
Eric Seidel (no email)
Reported 2007-09-25 12:42:52 PDT
WebKit hits ASSERT when attempting to drag an image from an SVG In the end, this seems to have been due to a lack of [DOMSVGImageElement _subresources], which I implemented. In order to make it work, I also had to export DOMSVG symbols from WebCore, as well as teach WebKit how to copy over the DOMSVG* header files into it's PrivateHeaders.
Attachments
the fix (97.32 KB, patch)
2007-09-25 13:07 PDT, Eric Seidel (no email)
no flags
fix, also fix --no-svg build on feature-branch (98.83 KB, patch)
2007-09-25 14:30 PDT, Eric Seidel (no email)
oliver: review+
updated patch for rebased feature-branch (mostly project file changes) (175.70 KB, patch)
2007-10-01 22:16 PDT, Eric Seidel (no email)
oliver: review+
Eric Seidel (no email)
Comment 1 2007-09-25 13:07:32 PDT
Created attachment 16389 [details] the fix
Eric Seidel (no email)
Comment 2 2007-09-25 14:30:33 PDT
Created attachment 16391 [details] fix, also fix --no-svg build on feature-branch
David Kilzer (:ddkilzer)
Comment 3 2007-09-26 07:14:39 PDT
Comment on attachment 16391 [details] fix, also fix --no-svg build on feature-branch >+ This only affects Debug builds, and the ability to save SVGs as WebArchives >+ neither are testable via DumpRenderTree. I don't believe this statement is true. It's possible for DRT to save pages as WebArchives now. See the tests in the LayoutTests/webarchive/ directory.
Eric Seidel (no email)
Comment 4 2007-09-28 09:45:59 PDT
The problem SVG was similar to (but not identical to) this one: http://people.mozilla.com/~vladimir/demos/photos.svg
Oliver Hunt
Comment 5 2007-10-01 19:13:38 PDT
This bugs was skipped when rebasing feature-branch and needs to be updated.
Eric Seidel (no email)
Comment 6 2007-10-01 22:16:07 PDT
Created attachment 16494 [details] updated patch for rebased feature-branch (mostly project file changes)
Oliver Hunt
Comment 7 2007-10-01 22:19:45 PDT
Comment on attachment 16494 [details] updated patch for rebased feature-branch (mostly project file changes) rs=me
Eric Seidel (no email)
Comment 8 2007-10-01 22:29:41 PDT
Landed (again) as r25906.
Note You need to log in before you can comment on or make changes to this bug.