2007-09-25  Eric Seidel  <eric@webkit.org>

Reviewed by Oliver Hunt.

        http://bugs.webkit.org/show_bug.cgi?id=15281
        This only affects Debug builds, and the ability to save SVGs as WebArchives
        neither are testable via DumpRenderTree.

        * Configurations/WebCore.xcconfig: change where Xcode looks for WebCore.exp
        * DerivedSources.make: adds SVG symbols to WebCore.exp when necessary
        * WebCore.SVG.exp: Added.
        * WebCore.exp: moved to WebCore.base.exp
        * WebCore.xcodeproj/project.pbxproj: updated to reflect moved files
        * bindings/objc/DOMSVGExecption.h: moved to DOMSVGException.h


git-svn-id: http://svn.webkit.org/repository/webkit/branches/feature-branch@25733 268f45cc-cd09-0410-ab3c-d52691b4dbfc